--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,2 +1,3 @@
 Revise the stable sort part of radix sort and why it is from last to first than the opposite one.
 Also find the time complexity of the same.!!!
+Practice the recursion and how it solves a question. https://youtu.be/M2uO2nMT0Bk
